added endpoint to return exhibition artefact by exh id
