# swagger.json
@@ -293,6 +293,24 @@
         }
       }
     },
+    "/exhibition-artefacts/{exhibition_id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "exhibition_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/exhibition/{id}": {
       "get": {
         "description": "",
